--- a/playbooks/apps.yml
+++ b/playbooks/apps.yml
@@ -11,15 +11,16 @@
 - name: Deploy and configure foundation apps
   hosts: apps
   tasks:
-    - name: Install authentik
-      ansible.builtin.import_role:
-        name: jaredhocutt.homelab.authentik
-      tags: [authentik]
-
     - name: Install traefik
       ansible.builtin.import_role:
         name: jaredhocutt.homelab.traefik
       tags: [traefik]
+
+    - name: Install authentik
+      ansible.builtin.import_role:
+        name: jaredhocutt.homelab.authentik
+      tags: [authentik]
+  tags: [foundation_apps]
 
 - name: Deploy and configure apps
   hosts: apps
