Add chezmoi and zsh to server_setup_packages in linux.yml
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/inventory/group_vars/linux.yml
+++ b/inventory/group_vars/linux.yml
@@ -1,6 +1,7 @@
 ---
 
 server_setup_packages:
+  - chezmoi
   - cockpit
   - cockpit-files
   - cockpit-networkmanager
@@ -21,6 +22,7 @@ server_setup_packages:
   - unzip
   - vim
   - wget
+  - zsh
 
 server_setup_enabled_services:
   - cockpit.socket
