--- a/playbooks/apps.yml
+++ b/playbooks/apps.yml
@@ -25,11 +25,6 @@
 - name: Deploy and configure apps
   hosts: apps
   tasks:
-    - name: Install archiveium
-      ansible.builtin.import_role:
-        name: jaredhocutt.homelab.archiveium
-      tags: [archiveium]
-
     - name: Install backrest
       ansible.builtin.import_role:
         name: jaredhocutt.homelab.backrest
@@ -40,10 +35,10 @@
         name: jaredhocutt.homelab.bar_assistant
       tags: [bar_assistant]
 
-    - name: Install calibre
+    - name: Install bentopdf
       ansible.builtin.import_role:
-        name: jaredhocutt.homelab.calibre
-      tags: [calibre]
+        name: jaredhocutt.homelab.bentopdf
+      tags: [bentopdf]
 
     - name: Install changedetection
       ansible.builtin.import_role:
@@ -59,11 +54,6 @@
       ansible.builtin.import_role:
         name: jaredhocutt.homelab.homarr
       tags: [homarr]
-
-    - name: Install immich
-      ansible.builtin.import_role:
-        name: jaredhocutt.homelab.immich
-      tags: [immich]
 
     - name: Install karakeep
       ansible.builtin.import_role:
@@ -84,11 +74,6 @@
       ansible.builtin.import_role:
         name: jaredhocutt.homelab.open_webui
       tags: [open_webui]
-
-    - name: Install paperless
-      ansible.builtin.import_role:
-        name: jaredhocutt.homelab.paperless
-      tags: [paperless]
 
     - name: Install stirling_pdf
       ansible.builtin.import_role:
